[tool.poetry]
name = "unittest_toml"
version = "0.1.0"
description = "this is unittest framework with toml file"
authors = ["Rihana <rihana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
selenium = "^4.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
